Added jobox, fixed dates

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
           </p>
         </div>
 
-        <!-- NearMe -->
+        <!-- Jobox -->
         <div class="right-view__activity">
-          <a href="https://itunes.apple.com/app/id1461682959" target="_blank" class="right-view__activity__header">NearMe: Find Friends Nearby</a>
+          <a href="https://www.jobox.ai" target="_blank" class="right-view__activity__header">Front-End Intern at Jobox.ai</a>
           <p class="right-view__activity__description">
-            NearMe is a location-based social media app that allows friends nearby to find each other. I designed app and logo and developed the app for iOS within a team of four through Mobile Developers of Berkeley.
+            I worked as a paid web development and iOS intern at Jobox.ai. In my time there, I built a new page for an existing project, and single-handedly created a web-app for non-app users from scratch. I worked in React, Redux, and Swift.
             <br>
             <span class="right-view__activity__date">Oct. 2018 - present</span>
           </p>
@@ -85,9 +85,19 @@
         <div class="right-view__activity">
           <a href="https://mdb.dev" target="_blank" class="right-view__activity__header">Mobile Developers of Berkeley</a>
           <p class="right-view__activity__description">
-            I’m an iOS and Android developer for Mobile Developers of Berkeley (MDB), and I’m developing an app every semester. My projects with MDB include Kozo, an app to beat procrastination.
+            I’m an iOS and Android developer for Mobile Developers of Berkeley (MDB), and I’m developing an app every semester. My projects with MDB include Kozo, an app to beat procrastination, and NearMe, a location-based social media app.
             <br>
             <span class="right-view__activity__date">Oct. 2018 - present</span>
+          </p>
+        </div>
+
+        <!-- NearMe -->
+        <div class="right-view__activity">
+          <a href="https://itunes.apple.com/app/id1461682959" target="_blank" class="right-view__activity__header">NearMe: Find Friends Nearby</a>
+          <p class="right-view__activity__description">
+            NearMe is a location-based social media app that allows friends nearby to find each other. I designed app and logo and developed the app for iOS within a team of four through Mobile Developers of Berkeley.
+            <br>
+            <span class="right-view__activity__date">Feb. 2019 - May 2019</span>
           </p>
         </div>
 
