--- a/index.html
+++ b/index.html
@@ -71,13 +71,23 @@
           </p>
         </div>
 
+        <!-- Bids -->
+        <div class="right-view__activity">
+          <a href="https://apps.apple.com/us/app/bids-events-made-easy/id1447479716" target="_blank" class="right-view__activity__header">iOS Developer at Bids</a>
+          <p class="right-view__activity__description">
+            I worked as the only iOS developer on Bids, a startup that aims to replace Fraternities’ wristband-based invite system with a mobile app.
+            <br>
+            <span class="right-view__activity__date">Oct. 2018 - present</span>
+          </p>
+        </div>
+
         <!-- Jobox -->
         <div class="right-view__activity">
           <a href="https://www.jobox.ai" target="_blank" class="right-view__activity__header">Front-End Intern at Jobox.ai</a>
           <p class="right-view__activity__description">
             I worked as a paid web development and iOS intern at Jobox.ai. In my time there, I built a new page for an existing project, and single-handedly created a web-app for non-app users from scratch. I worked in React, Redux, and Swift.
             <br>
-            <span class="right-view__activity__date">Oct. 2018 - present</span>
+            <span class="right-view__activity__date">May 2019 - Aug. 2019</span>
           </p>
         </div>
 
