--- a/pages/about.html
+++ b/pages/about.html
@@ -7,10 +7,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Anand Chandra: Designer and Developer">
-    <meta name="keywords" content="Anand Chandra, UC Berkeley, hz, chorely, kozo, mdb, mobile developers of berkeley, perspective">
+    <meta name="keywords" content="Anand Chandra, empty dreams, UC Berkeley, hz, chorely, kozo, mdb, mobile developers of berkeley, perspective">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link href="/styles/home.css" rel="stylesheet" type="text/css">
     <link href="/styles/base.css" rel="stylesheet" type="text/css">
+    <link href="/styles/showcase.css" rel="stylesheet" type="text/css">
+    <link href="/styles/about.css" rel="stylesheet" type="text/css">
     <link rel="apple-touch-icon" sizes="57x57" href="/favicon-info/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favicon-info/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/favicon-info/apple-icon-72x72.png">
@@ -48,17 +49,30 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
+  <div class="left-text">just a little about me</div>
+  <div class="options-container mt-2">
+    <a class="options-container__options" href="http://anandchandra.com/">home</a>
+    <a class="options-container__options" href="/pages/designer">designer</a>
+    <a class="options-container__options" href="/pages/developer">developer</a>
+  </div>
   <div class="base-container">
-    <div class="base-content">
-      <img class="base-content__image" src="/images/prof.jpeg" alt="profile"/>
-      <div class="base-content__name">
-        anand chandra
-      </div>
-      <div class="options-container">
-        <a class="options-container__options" href="/pages/designer">designer</a>
-        <a class="options-container__options" href="/pages/developer">developer</a>
-        <a class="options-container__options" href="/pages/about">about</a>
-      </div>
+    <img class="about-image" src="/images/about.JPG" alt="me"/>
+    <div class="about-header">
+      Hey, I'm Anand.
+    </div>
+    <br><br>
+    <div class="about-text">
+      I'm passionate about designing and developing. But there's more to me than just that.
+      <br><br>
+      I love spending time with friends. I like long walks and long talks. I enjoy listening to music and going to concerts. I live for good food.
+      Although I'm not great, I enjoy playing basketball. When I have time, I work on improving as an artist.
+      <br><br>
+      I also like to do a lot of thinking, and I try to capture those feelings in words or drawings.
+      <br><br>
+      To me right now, life's about the details, the subtlety, the small moments. How that one song made me feel. How it was nice coming home and seeing my friends after a long day.
+      How the sun hit the buildings right before sunset. Life has so much more depth when we choose to open our eyes to it.
+      <br><br>
+      Anyways, if you're interested in reaching out to me for any reason (to work, to talk, whatever) please do! You can find me at: anandchandra[at]berkeley.edu
     </div>
   </div>
 </body>
