--- a/pages/developer.html
+++ b/pages/developer.html
@@ -133,7 +133,7 @@
         <div class="text-container__body">
           Kozo, an iOS app, helps students keep track of assignments, projects, and extracurricular work.
           I worked in a team of 3 within MDB, and created the wireframes (on Figma) and developed most of the front-end (in XCode).
-          We created the app the provide a gamified approach to fighting procrastination.
+          We created the app to provide a gamified approach to fighting procrastination.
         </div>
       </div>
     </div>
@@ -153,7 +153,7 @@
         <div class="text-container__dates">solo ml project: june 2018 - july 2018</div>
         <div class="text-container__body">
           Deep Space is a Deep Convolutional Generative Adversarial Network (DCGAN) that generates space pictures from scratch.
-          I built it after taking cs231n (stanford's course on cnn's), and I wanted to apply what I learned to a real project.
+          I built it after taking cs231n (stanford's course on cnn's); I wanted to apply what I learned to a real project.
         </div>
       </div>
     </div>
