added bids to design

--- a/pages/developer.html
+++ b/pages/developer.html
@@ -91,7 +91,7 @@
         </a>
         <div class="text-container__dates">part-time job: oct. 2018 - present</div>
         <div class="text-container__body">
-          I was hired as the only iOS developer on Bids, a startup that aims to replace Fraternities’ wristband-based invite system with a mobile app.
+        I was the iOS developer on Bids, a startup that aims to replace Fraternities’ wristband-based party invite system with a mobile app.
         </div>
       </div>
     </div>
