--- a/pages/designer.html
+++ b/pages/designer.html
@@ -55,6 +55,7 @@
       <a class="options-container__options" href="/pages/developer">developer</a>
       <a class="options-container__options" href="/pages/about">about</a>
     </div>
+
     <div class="item-container first-item-container">
       <a target="_blank" href="https://shopemptydreams.com">
         <img
@@ -67,11 +68,38 @@
         <a target="_blank" href="https://shopemptydreams.com">
           <div class="text-container__header">Empty Dreams</div>
         </a>
-        <div class="text-container__dates">Jul. 2019 - present.</div>
+        <div class="text-container__dates">solo project: july 2019 - present.</div>
         <div class="text-container__body">
           This summer, I started designing my own clothes (such as the hoodie pictured).
           It's a great hobby&#8212I've made and bought a few pieces that I love to wear.
           I used Adobe Illustrator to create the designs.
+        </div>
+      </div>
+    </div>
+
+    <div class="item-container">
+      <a target="_blank" href="https://drive.google.com/open?id=19br2QRyKDUPCVE9vN4tMiKQpi04M_eQx">
+        <img
+          class="item-container__image"
+          src="../images/bids.png"
+          alt="bids events"
+        />
+      </a>
+      <div class="text-container">
+        <a target="_blank" href="https://drive.google.com/open?id=19br2QRyKDUPCVE9vN4tMiKQpi04M_eQx">
+          <div class="text-container__header">Bids Events</div>
+        </a>
+        <div class="text-container__dates">solo developer project: jul. 2019 - aug. 2019</div>
+        <div class="text-container__body">
+          I was the iOS developer on Bids, a startup that aims to replace Fraternities’ wristband-based party invite system with a mobile app.
+          Over the summer, I decided to redesign the entire app for fun (click the icon). Here's what it looked like
+          <a
+            target="_blank"
+            href="https://apps.apple.com/us/app/bids-events-made-easy/id1447479716"
+            class="text-link"
+          >
+            before.
+          </a>
         </div>
       </div>
     </div>
