--- a/pages/designer.html
+++ b/pages/designer.html
@@ -49,13 +49,14 @@
 </head>
 <body>
   <div class="left-text">just some things i've designed</div>
-  <div class="base-container">
-    <div class="options-container mt-2">
-      <a class="options-container__options" href="http://anandchandra.com/">home</a>
-      <a class="options-container__options" href="/pages/developer">developer</a>
-      <a class="options-container__options" href="/pages/about">about</a>
-    </div>
+  <div class="options-container mt-2">
+    <a class="options-container__options" href="http://anandchandra.com/">home</a>
+    <a class="options-container__options" href="/pages/developer">developer</a>
+    <a class="options-container__options options-container__selected-option" href="/pages/designer">designer</a>
+    <a class="options-container__options" href="/pages/about">about</a>
+  </div>
 
+  <div class="base-container">
     <div class="item-container first-item-container">
       <a target="_blank" href="https://shopemptydreams.com">
         <img
