--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       <div class="base-content__name">
         anand chandra
       </div>
-      <div class="options-container">
-        <a class="options-container__options" href="/pages/designer">designer</a>
-        <a class="options-container__options" href="/pages/developer">developer</a>
-        <a class="options-container__options" href="/pages/about">about</a>
+      <div class="options-container options-container-home">
+        <a class="options-container__options options-container__home-option" href="/pages/developer">developer</a>
+        <a class="options-container__options options-container__home-option" href="/pages/designer">designer</a>
+        <a class="options-container__options options-container__home-option" href="/pages/about">about</a>
       </div>
     </div>
   </div>
