--- a/pages/about.html
+++ b/pages/about.html
@@ -52,8 +52,10 @@
   <div class="left-text">just a little about me</div>
   <div class="options-container mt-2">
     <a class="options-container__options" href="http://anandchandra.com/">home</a>
-    <a class="options-container__options" href="/pages/designer">designer</a>
     <a class="options-container__options" href="/pages/developer">developer</a>
+    <a class="options-container__options" href="/pages/designer">designer</a>
+    <a class="options-container__options options-container__selected-option" href="/pages/about">about</a>
+
   </div>
   <div class="base-container">
     <img class="about-image" src="/images/about.JPG" alt="me"/>
