updated nearme link

--- a/pages/designer.html
+++ b/pages/designer.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="item-container">
-      <a target="_blank" href="https://itunes.apple.com/app/id1461682959">
+      <a target="_blank" href="https://drive.google.com/open?id=1Mu5jUrAhesIdujCKqMWY5vFhwCwL4rHR">
         <img
           class="item-container__image"
           src="../images/nearme.png"
@@ -114,7 +114,7 @@
         />
       </a>
       <div class="text-container">
-        <a target="_blank" href="https://itunes.apple.com/app/id1461682959">
+        <a target="_blank" href="https://drive.google.com/open?id=1Mu5jUrAhesIdujCKqMWY5vFhwCwL4rHR">
           <div class="text-container__header">NearMe: Find Friends Nearby</div>
         </a>
         <div class="text-container__dates">team iOS project (MDB): feb. 2019 - may. 2019</div>
