--- a/pages/designer.html
+++ b/pages/designer.html
@@ -58,7 +58,7 @@
 
   <div class="base-container">
     <div class="item-container first-item-container">
-      <a target="_blank" href="https://shopemptydreams.com">
+      <a target="_blank" href="https://www.shopemptydreams.com">
         <img
           class="item-container__image"
           src="../images/emptydreams.png"
@@ -66,7 +66,7 @@
         />
       </a>
       <div class="text-container">
-        <a target="_blank" href="https://shopemptydreams.com">
+        <a target="_blank" href="https://www.shopemptydreams.com">
           <div class="text-container__header">Empty Dreams</div>
         </a>
         <div class="text-container__dates">solo project: july 2019 - present.</div>
