--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
 <body>
   <div class="base-container">
     <div class="base-content">
-      <img class="base-content__image" src="/images/prof.jpeg" alt="profile"/>
+      <img class="base-content__image" src="/images/prof.jpg" alt="profile"/>
       <div class="base-content__name">
-        anand chandra
+        Anand Chandra
       </div>
       <div class="options-container options-container-home">
-        <a class="options-container__options options-container__home-option" href="/pages/developer">developer</a>
-        <a class="options-container__options options-container__home-option" href="/pages/designer">designer</a>
-        <a class="options-container__options options-container__home-option" href="/pages/about">about</a>
+        <a class="options-container__options options-container__home-option" href="/pages/developer">Developer</a>
+        <a class="options-container__options options-container__home-option" href="/pages/designer">Designer</a>
       </div>
     </div>
   </div>
