--- a/pages/designer.html
+++ b/pages/designer.html
@@ -50,10 +50,9 @@
 <body>
   <div class="left-text">just some things i've designed</div>
   <div class="options-container mt-2">
-    <a class="options-container__options" href="http://anandchandra.com/">home</a>
-    <a class="options-container__options" href="/pages/developer">developer</a>
-    <a class="options-container__options options-container__selected-option" href="/pages/designer">designer</a>
-    <a class="options-container__options" href="/pages/about">about</a>
+    <a class="options-container__options" href="http://anandchandra.com/">Home</a>
+    <a class="options-container__options" href="/pages/developer">Developer</a>
+    <a class="options-container__options options-container__selected-option" href="/pages/designer">Designer</a>
   </div>
 
   <div class="base-container">
@@ -69,11 +68,9 @@
         <a target="_blank" href="https://www.shopemptydreams.com">
           <div class="text-container__header">Empty Dreams</div>
         </a>
-        <div class="text-container__dates">solo project: july 2019 - present.</div>
+        <div class="text-container__dates">solo project: jul. 2019 - feb. 2020.</div>
         <div class="text-container__body">
-          This summer, I started designing my own clothes (such as the hoodie pictured).
-          It's a great hobby&#8212I've made and bought a few pieces that I love to wear.
-          I used Adobe Illustrator to create the designs.
+          I designed and sold clothing for this brand I created, and I'm in the process of rebranding.
         </div>
       </div>
     </div>
