--- a/pages/developer.html
+++ b/pages/developer.html
@@ -50,10 +50,9 @@
 <body>
   <div class="left-text">just some things i've developed or worked on</div>
   <div class="options-container mt-2">
-    <a class="options-container__options" href="http://anandchandra.com/">home</a>
-    <a class="options-container__options options-container__selected-option" href="/pages/developer">developer</a>
-    <a class="options-container__options" href="/pages/designer">designer</a>
-    <a class="options-container__options" href="/pages/about">about</a>
+    <a class="options-container__options" href="http://anandchandra.com/">Home</a>
+    <a class="options-container__options options-container__selected-option" href="/pages/developer">Developer</a>
+    <a class="options-container__options" href="/pages/designer">Designer</a>
   </div>
   <div class="base-container">
 
