--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="/styles/base.css" rel="stylesheet" type="text/css">
     <link href="/styles/mdb.css" rel="stylesheet" type="text/css">
     <link href="/styles/tke.css" rel="stylesheet" type="text/css">
+    <link href="/styles/visa.css" rel="stylesheet" type="text/css">
     <link rel="apple-touch-icon" sizes="57x57" href="/favicon-info/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favicon-info/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/favicon-info/apple-icon-72x72.png">
@@ -176,6 +177,38 @@
           <img class="showcase__image" src="./images/tke/square.png" alt="square"/>
         </div>
         <p class="caption mt-caption">Square. Posted on Instagram. 1 x 1, visual graphic</p>
+      </div>
+    </div>
+    <div class="visa section">
+      <!-- Header -->
+      <div class="visa__header block">
+        <div class="block-default">
+          <h1>Visa<h1>
+        </div>
+      </div>
+      <!-- Description -->
+      <div class="visa__desc block">
+        <div class="block-default">
+          <h6>Design work I made for Visa as a 2020 SWE intern.</h6>
+        </div>
+      </div>
+      <!-- Slide -->
+      <div class="visa__slide block">
+        <div class="block-default overflow-hidden">
+          <a href="./files/VisaGives.pdf" download>
+            <img class="showcase__image" src="./images/visa/slide.jpeg" alt="slide deck"/>
+          </a>
+        </div>
+        <p class="caption mt-caption">Slide Deck. Selected as finalist by judges. Click to download.</p>
+      </div>
+      <!-- Web -->
+      <div class="visa__web block">
+        <div class="block-default overflow-hidden">
+          <a target="_blank" href="https://tiffanyphan.dev/Visa-Gives/" download>
+            <img class="showcase__image" src="./images/visa/web.PNG" alt="website"/>
+          </a>
+        </div>
+        <p class="caption mt-caption">Website. Designed UI and UX. Click to view.</p>
       </div>
     </div>
   </div>
