--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
         <div class="block-default overflow-hidden">
           <img class="home__profile-image" src="./images/home/profile.JPG" alt="cover-image"/>
         </div>
-        <p class="caption mt-caption">Photo shot at The Avenues in San Francisco.</p>
       </div>
       <div class="home__header block">
         <div class="block-default">
@@ -67,7 +66,7 @@
       </div>
       <div class="home__contact block">
         <div class="block-default">
-          <h6>
+          <h5>
             <a href="./files/resume.pdf" download class="home__contact__button">Resume</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="mailto:anandchandra@berkeley.edu" class="home__contact__button">Email</a>
@@ -176,7 +175,7 @@
         <div class="block-default overflow-hidden">
           <img class="showcase__image" src="./images/tke/square.png" alt="square"/>
         </div>
-        <p class="caption mt-caption">Square. Posted on Instagram. 1 x 1, visual graphic</p>
+        <p class="caption mt-caption">Instagram Post. 1 x 1, visual graphic</p>
       </div>
     </div>
     <div class="visa section">
