--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
         <div class="block-default">
           <h5>
             <a href="./files/resume.pdf" download class="home__contact__button">Resume</a>
-            &nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="desktop-only">&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <br class="mobile-only"/>
             <a href="mailto:anandchandra@berkeley.edu" class="home__contact__button">Email</a>
-            &nbsp;&nbsp;&nbsp;&nbsp;
+            <br class="mobile-only"/>
+            <span class="desktop-only">&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <a href="https://www.linkedin.com/in/anandchandra/" target="_blank" class="home__contact__button">LinkedIn</a>
         </div>
       </div>
