--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="mailto:anandchandra@berkeley.edu" class="home__contact__button">Email</a>
             <br class="mobile-only"/>
             <span class="desktop-only">&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <a href="https://www.linkedin.com/in/anandchandra/" target="_blank" class="home__contact__button">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/austin5/" target="_blank" class="home__contact__button">LinkedIn</a>
         </div>
       </div>
       <div class="home__bio block">
