--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <a href="./files/resume.pdf" download class="home__contact__button">Resume</a>
             <span class="desktop-only">&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <br class="mobile-only"/>
-            <a href="mailto:anandchandra@berkeley.edu" class="home__contact__button">Email</a>
+            <a href="mailto:austinchandra@berkeley.edu" class="home__contact__button">Email</a>
             <br class="mobile-only"/>
             <span class="desktop-only">&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <a href="https://www.linkedin.com/in/austin5/" target="_blank" class="home__contact__button">LinkedIn</a>
