--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="home__bio block">
         <div class="block-default">
           <div class="home__bio__container">
-            <h5>EECS at UC Berkeley, class of 2022. Trained engineer, self-taught designer. Seeking internships for software engineering, product design, and project manager roles. View design works below.</h5>
+            <h5>EECS at UC Berkeley, class of 2022. Trained engineer, self-taught designer. Pursuing a career in product, interested in the future. View design works below.</h5>
         </div>
         </div>
       </div>
