--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="home__grid">
       <div class="home__profile block">
         <div class="block-default overflow-hidden">
-          <img class="home__profile-image" src="./images/home/profile.JPG" alt="cover-image"/>
+          <img class="home__profile-image" src="./images/home/profile.jpg" alt="cover-image"/>
         </div>
       </div>
       <div class="home__header block">
